--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   </head>
   <body>
 
-    <p> functions of a calculator x</p>
+    <p> functions of a calculator</p>
+    <p> its fun</p>
     <script src="js/script.js"></script>
 
   </body>
